closed a tags. arranged top nav

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <header>
       <img class="logo" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png" alt="tea_cozy_logo">
       <nav class="nav">
-          <span> <a href="#">Mission</span>
-          <span> <a href="featured">Featured Tea</span>
-          <span><a href="locations">Locations</span>
+          <span><a href="#">Mission</a></span>
+          <span><a href="featured">Featured Tea</a></span>
+          <span><a href="locations">Locations</a></span>
       </nav>
     </header>
 
