--- a/index.html
+++ b/index.html
@@ -17,60 +17,63 @@
       </nav>
     </header>
 
+    <div class="content">
 
-    <div class="">
-      <h2 id="mission">Our Mission</h2>
-      <h4>Handpicked, Arttisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-    </div>
-
-    <div class="">
-      <div class="title">
-        <h2 id="featured">Tea of the Month</h2>
-        <h4>What's Steeping at the Tea Cozy?</h4>
+      <div class="">
+        <h2 id="mission">Our Mission</h2>
+        <h4>Handpicked, Arttisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
       </div>
-      <div class="menu">
-        <div class="topline">
-          <h4>Fall Berry Blitz Tea</h4>
-          <h4>Spiced Rum Tea</h4>
-          <h4>Seasonal Donuts</h4>
+
+      <div class="">
+        <div class="title">
+          <h2 id="featured">Tea of the Month</h2>
+          <h4>What's Steeping at the Tea Cozy?</h4>
         </div>
-        <div class="bottomline">
-          <h4>Myrtle Ave Tea</h4>
-          <h4>Bedford Bizarre Tea</h4>
+        <div class="menu">
+          <div class="topline">
+            <h4>Fall Berry Blitz Tea</h4>
+            <h4>Spiced Rum Tea</h4>
+            <h4>Seasonal Donuts</h4>
+          </div>
+          <div class="bottomline">
+            <h4>Myrtle Ave Tea</h4>
+            <h4>Bedford Bizarre Tea</h4>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="">
-      <h1 id="locations">Locations</h1>
-      <div class="block">
-        <h3 class="name">Downtown</h3>
-        <h3>384 West 4th St</h3>
-        <h3>Suite 108</h3>
-        <h3>Portland, Maine</h3>
+      <div class="">
+        <h1 id="locations">Locations</h1>
+        <div class="block">
+          <h3 class="name">Downtown</h3>
+          <h3>384 West 4th St</h3>
+          <h3>Suite 108</h3>
+          <h3>Portland, Maine</h3>
+        </div>
+        <div class="block">
+          <h3 class="name">East Bayside</h3>
+          <h3>3433 Phisherman's Avenue</h3>
+          <h3>(Northwest Corner)</h3>
+          <h3>Portland, Maine</h3>
+        </div>
+        <div class="block">
+          <h3 class="name">515 Crescent Avenue</h3>
+          <h3>Second Floor</h3>
+          <h3>Porland, Maine</h3>
+        </div>
       </div>
-      <div class="block">
-        <h3 class="name">East Bayside</h3>
-        <h3>3433 Phisherman's Avenue</h3>
-        <h3>(Northwest Corner)</h3>
-        <h3>Portland, Maine</h3>
+
+      <div class="contact">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
       </div>
-      <div class="block">
-        <h3 class="name">515 Crescent Avenue</h3>
-        <h3>Second Floor</h3>
-        <h3>Porland, Maine</h3>
-      </div>
+
+      <footer>
+        <h5>copyright The Tea Cozy 2017</h5>
+      </footer>
+
+
     </div>
-
-    <div class="contact">
-      <h2>The Tea Cozy</h2>
-      <h5>contact@theteacozy.com</h5>
-      <h5>917-555-8904</h5>
-    </div>
-
-    <footer>
-      <h5>copyright The Tea Cozy 2017</h5>
-    </footer>
-
   </body>
 </html>
