dropped first background image. need to center

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="content">
 
-      <div class="">
+      <div class="our_mission">
         <h2 id="mission">Our Mission</h2>
         <h4>Handpicked, Arttisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
       </div>
