center main background image

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
     <div class="content">
 
-      <div class="our_mission">
-        <h2 id="mission">Our Mission</h2>
-        <h4>Handpicked, Arttisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+      <div class="mission_body">
+        <h2 id="mission" class="mission_text">Our Mission</h2>
+        <h4 class="mission_text">Handpicked, Arttisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
       </div>
 
       <div class="">
