centered and created background for text. need to center it vertically

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
     <div class="content">
 
       <div class="mission_body">
-        <h2 id="mission" class="mission_text">Our Mission</h2>
-        <h4 class="mission_text">Handpicked, Arttisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        <div>
+          <h2 id="mission" class="mission_text1">Our Mission</h2>
+          <h4  class="mission_text2">Handpicked, Arttisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
       </div>
 
       <div class="">
