centered mission statement

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="content">
 
       <div class="mission_body">
-        <div>
+        <div class="mission_text">
           <h2 id="mission" class="mission_text1">Our Mission</h2>
           <h4  class="mission_text2">Handpicked, Arttisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
