--- a/index.html
+++ b/index.html
@@ -31,18 +31,45 @@
           <h2 id="featured">Tea of the Month</h2>
           <h4>What's Steeping at the Tea Cozy?</h4>
         </div>
+
+
         <div class="menu">
+
           <div class="topline">
-            <h4>Fall Berry Blitz Tea</h4>
-            <h4>Spiced Rum Tea</h4>
-            <h4>Seasonal Donuts</h4>
+
+
+            <div class="fall">
+              <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="berry">
+              <h4>Fall Berry Blitz Tea</h4>
+            </div>
+
+            <div class="spiced">
+              <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg" alt="spiced_rum">
+              <h4>Spiced Rum Tea</h4>
+            </div>
+
+            <div class="seasonal">
+              <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg" alt="donut">
+              <h4>Seasonal Donuts</h4>
+            </div>
           </div>
+
+
           <div class="bottomline">
-            <h4>Myrtle Ave Tea</h4>
-            <h4>Bedford Bizarre Tea</h4>
+            <div class="myrtle">
+              <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg" alt="tea">
+              <h4>Myrtle Ave Tea</h4>
+            </div>
+            <div class="bedford">
+              <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" alt="purple_tea">
+              <h4>Bedford Bizarre Tea</h4>
+            </div>
           </div>
+
         </div>
       </div>
+
+
 
       <div class="">
         <h1 id="locations">Locations</h1>
