--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
           <div class="topline">
 
 
-            <div class="fall">
+            <div class="item">
               <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="berry">
               <h4>Fall Berry Blitz Tea</h4>
             </div>
 
-            <div class="spiced">
+            <div class="item">
               <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg" alt="spiced_rum">
               <h4>Spiced Rum Tea</h4>
             </div>
 
-            <div class="seasonal">
+            <div class="item">
               <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg" alt="donut">
               <h4>Seasonal Donuts</h4>
             </div>
@@ -56,14 +56,17 @@
 
 
           <div class="bottomline">
-            <div class="myrtle">
-              <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg" alt="tea">
-              <h4>Myrtle Ave Tea</h4>
+            <div class="bottomline_item_width">
+              <div class="item">
+                <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg" alt="tea">
+                <h4>Myrtle Ave Tea</h4>
+              </div>
+              <div class="item">
+                <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" alt="purple_tea">
+                <h4>Bedford Bizarre Tea</h4>
+              </div>
             </div>
-            <div class="bedford">
-              <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" alt="purple_tea">
-              <h4>Bedford Bizarre Tea</h4>
-            </div>
+
           </div>
 
         </div>
