preliminary locations code

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <nav>
           <span><a href="#">Mission</a></span>
           <span><a href="#featured">Featured Tea</a></span>
-          <span><a href="#locations">Locations</a></span>
+          <span><a href="#top_locations">Locations</a></span>
       </nav>
     </header>
 
@@ -34,27 +34,20 @@
 
 
         <div class="menu">
-
           <div class="topline">
-
-
             <div class="item">
               <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="berry">
               <h4>Fall Berry Blitz Tea</h4>
             </div>
-
             <div class="item">
               <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg" alt="spiced_rum">
               <h4>Spiced Rum Tea</h4>
             </div>
-
             <div class="item">
               <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg" alt="donut">
               <h4>Seasonal Donuts</h4>
             </div>
           </div>
-
-
           <div class="bottomline">
             <div class="bottomline_item_width">
               <div class="item">
@@ -66,16 +59,14 @@
                 <h4>Bedford Bizarre Tea</h4>
               </div>
             </div>
-
           </div>
-
         </div>
       </div>
 
 
 
-      <div class="">
-        <h1 id="locations">Locations</h1>
+      <div class="locations">
+        <h1 id="top_locations">Locations</h1>
         <div class="block">
           <h3 class="name">Downtown</h3>
           <h3>384 West 4th St</h3>
