--- a/index.html
+++ b/index.html
@@ -31,8 +31,6 @@
           <h2 id="featured">Tea of the Month</h2>
           <h4>What's Steeping at the Tea Cozy?</h4>
         </div>
-
-
         <div class="menu">
           <div class="topline">
             <div class="item">
@@ -80,7 +78,8 @@
           <h3>Portland, Maine</h3>
         </div>
         <div class="block">
-          <h3 class="name">515 Crescent Avenue</h3>
+          <h3 class="name">Oakdale</h3>
+          <h3>515 Crescent Avenue</h3>
           <h3>Second Floor</h3>
           <h3>Porland, Maine</h3>
         </div>
@@ -95,7 +94,6 @@
       <footer>
         <h5>copyright The Tea Cozy 2017</h5>
       </footer>
-
 
     </div>
   </body>
