--- a/index.html
+++ b/index.html
@@ -65,30 +65,34 @@
 
       <div class="locations">
         <h1 id="top_locations">Locations</h1>
-        <div class="block">
-          <h3 class="name">Downtown</h3>
-          <h3>384 West 4th St</h3>
-          <h3>Suite 108</h3>
-          <h3>Portland, Maine</h3>
-        </div>
-        <div class="block">
-          <h3 class="name">East Bayside</h3>
-          <h3>3433 Phisherman's Avenue</h3>
-          <h3>(Northwest Corner)</h3>
-          <h3>Portland, Maine</h3>
-        </div>
-        <div class="block">
-          <h3 class="name">Oakdale</h3>
-          <h3>515 Crescent Avenue</h3>
-          <h3>Second Floor</h3>
-          <h3>Porland, Maine</h3>
+        <div class="block_width">
+          <div class="block">
+            <h3 class="name">Downtown</h3>
+            <p>384 West 4th St</p>
+            <p>Suite 108</p>
+            <p>Portland, Maine</p>
+          </div>
+          <div class="block" class="east_bayside">
+            <h3 class="name">East Bayside</h3>
+            <p>3433 Phisherman's Avenue</p>
+            <p>(Northwest Corner)</p>
+            <p>Portland, Maine</p>
+          </div>
+          <div class="block">
+            <h3 class="name">Oakdale</h3>
+            <p>515 Crescent Avenue</p>
+            <p>Second Floor</p>
+            <p>Porland, Maine</p>
+          </div>
         </div>
       </div>
 
+
+
       <div class="contact">
         <h2>The Tea Cozy</h2>
-        <h5>contact@theteacozy.com</h5>
-        <h5>917-555-8904</h5>
+        <p>contact@theteacozy.com</p>
+        <p>917-555-8904</p>
       </div>
 
       <footer>
