centered and spaced location blocks

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <p>Suite 108</p>
             <p>Portland, Maine</p>
           </div>
-          <div class="block" class="east_bayside">
+          <div class="block">
             <h3 class="name">East Bayside</h3>
             <p>3433 Phisherman's Avenue</p>
             <p>(Northwest Corner)</p>
