--- a/index.html
+++ b/index.html
@@ -86,19 +86,16 @@
           </div>
         </div>
       </div>
-
-
-
       <div class="contact">
         <h2>The Tea Cozy</h2>
         <p>contact@theteacozy.com</p>
         <p>917-555-8904</p>
       </div>
-
-      <footer>
-        <h5>copyright The Tea Cozy 2017</h5>
-      </footer>
-
     </div>
+
+    <div class="footer">
+      <h5>copyright The Tea Cozy 2017</h5>
+    </div>
+
   </body>
 </html>
