fixed anchor tag positioning

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   </head>
 
   <body>
-
     <header>
       <img class="logo" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png" alt="tea_cozy_logo">
       <nav>
@@ -18,15 +17,13 @@
     </header>
 
     <div class="content">
-
-      <div class="mission_body">
+    <div class="mission_body">
         <div class="mission_text">
           <h2 id="mission" class="mission_text1">Our Mission</h2>
-          <h4  class="mission_text2">Handpicked, Arttisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+          <h4 class="mission_text2">Handpicked, Arttisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
       </div>
-
-      <div class="">
+      <div class="tea_body">
         <div class="title">
           <h2 id="featured">Tea of the Month</h2>
           <h4>What's Steeping at the Tea Cozy?</h4>
@@ -61,10 +58,8 @@
         </div>
       </div>
 
-
-
       <div class="locations">
-        <h1 id="top_locations">Locations</h1>
+        <h2 id="top_locations">Locations</h2>
         <div class="block_width">
           <div class="block">
             <h3 class="name">Downtown</h3>
@@ -96,6 +91,6 @@
     <div class="footer">
       <h5>copyright The Tea Cozy 2017</h5>
     </div>
-
   </body>
+  
 </html>
